--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,26 @@
-.clearfix:after {
+.clearfix:after {       /* это свойство Применяется в том случае когда в родителе используются блоки с float */
     content: "";
     display: block;
     clear: both;
 }
 
+a {     /*  Убирает подчеркивание у всех ссылок */
+    text-decoration: none; 
+}
 
+ul {    /*  Убирает свойства списков */
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
 
 body {
-    font-family: 'Roboto', arial, sans-serif
+    font-family: 'Roboto', arial, sans-serif;
 }
 
 .container {
     margin: 0 auto; /* Отступ, растягивание на всю ширину */
-    width: 1080px;
+    width: 1100px;
 }
 
 .logo, .contacts {
@@ -21,6 +29,10 @@ body {
 
 .logo {
     margin-left: 20px;
+}
+
+.contacts {
+    margin-right: 21px;
 }
 
 .contacts__phone {
@@ -34,10 +46,11 @@ body {
     color: rgba(255, 255, 255, .7);
     font-weight: bold;
     font-size: 14px;
+    text-decoration: underline;
 }
 
 .header {
-    height: 77px;   /*  Ширина и цвет заливки шапки */
+     /*  цвет заливки шапки */
     background: #4b73b5; 
     position: relative;
 }
@@ -46,6 +59,7 @@ body {
     float: left;
     width: 50%;
     padding-top: 20px;
+    padding-bottom: 17px;
 }
 
 .header__right {
@@ -59,6 +73,7 @@ body {
     background-image: url('../img/pic/Photo.png');
     background-repeat: no-repeat;
     position: relative;
+    margin-top: 17px;
 }
 
 /*
@@ -70,7 +85,8 @@ body {
 
  .content {
      float: right;
-     width: 900px;
+     width: 880px;
+     padding-right: 20px;
  }
 
  .nav {
@@ -78,28 +94,139 @@ body {
     width: 180px;
  }
 
-.latest-news__foto {    /* Изменяет форму картинки */
-    overflow: hidden;
-    border-radius: 50%;
+.nav__text {
+    display: inline-block;
+    vertical-align: middle;
+    color: #4b73b5;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.nav__link:hover .nav__text, .nav__link-active .nav__text{
+    color: #221f1f;
+}
+
+.nav__link:hover .nav__icon {
+    background-image: url('../img/icon/navigation/main_icon1.png');
+}
+
+ .nav__icon {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+ }
+ 
+.nav__icon-main {
+    background: url('../img/icon/navigation/main_icon.png');
+    width: 17px;
+    height: 18px;
+}
+
+.nav__icon-feed {
+    background: url('../img/icon/navigation/feed_icon.png');
+    width: 20px;
+    height: 18px;
+}
+
+.nav__icon-team {
+    background: url('../img/icon/navigation/team_icon.png');
+    width: 23px;
+    height: 18px;
+}
+
+.nav__link {
+
+}
+
+.latest-news__foto, .latest-news__foto-pic {    /* Изменяет форму картинки */
     width: 160px;
     height: 160px;
+    border-radius: 50%;
+    overflow: hidden;
+    float: left;
+    margin-right: 20px;
+}
+
+.latest-news__item {
+    margin-bottom: 30px;
+}
+
+.latest-news__item-wrap {
+    border-bottom: 2px solid #f5f5f5;
     display: inline-block;
+    padding-bottom: 25px;
 }
 
 .latest-news__text {    
-    display: inline-block;  /* Блок переносит на одну линию */
-    width: 664px;
-    height: 164px;
+    width: 652px;
+    float: left;
 }
 
 .latest-news__list {
     list-style: none;   /* Убирает точки у списка */
 }
 
-.latest-news__item { 
-    border-bottom: 1px solid black; /* Для установки нижнего бордера */
+.latest-news__date {
+    color: #656464;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 21px;
+    margin-bottom: 10px;
 }
 
-.latest-news__item:last-child { /* Для отключения последнего у родителя */
-    border-bottom: none; /* или же initian - для установки по уполчанию */
+.latest-news__h3 {
+    color: #221f1f;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    margin-bottom: 5px;
+}
+
+.latest-news__content {
+    color: #221f1f;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+.pagination {
+    text-align: center;
+}
+
+.pagination__display, .pagination__controls {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.pagination__btn, .pagination__list, .pagination__item {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.pagination__display {
+    font-size: 14px;
+    font-weight: 300;
+    color: #656464;
+    margin-right: 20px;
+  }
+
+  .pagination__page {
+    display: block;
+    padding: 5px 0px;
+    width: 25px;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 5px;
+    color: #221f1f;
+  }
+
+  .pagination__page_active {
+    background: #4b73b5;
+    color: #fff;
+  }
+
+  .latest-news__item:last-child { /* Для отключения последнего у родителя */
+    border-bottom: initial;  /* или же initian - для установки по уполчанию */
 }
